--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "serve": "^11.0.0",
     "style-loader": "^0.23.1",
     "svelte": "^3.0.0",
-    "svelte-loader": "2.13.3",
+    "svelte-loader-hot": "^0.1.0",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
-    "dev": "webpack-dev-server --content-base public"
+    "dev": "webpack-dev-server"
   }
 }
