--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "mini-css-extract-plugin": "^0.6.0",
     "serve": "^11.0.0",
     "style-loader": "^0.23.1",
-    "svelte": "~3.16.7",
-    "svelte-loader-hot": "^0.1.1",
+    "svelte": "^3.19.1",
+    "svelte-loader-hot": "^0.2.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1"
