--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "devDependencies": {
-    "cross-env": "^5.2.0",
-    "css-loader": "^2.1.1",
-    "mini-css-extract-plugin": "^0.6.0",
-    "serve": "^11.0.0",
-    "style-loader": "^0.23.1",
+    "cross-env": "^7.0.0",
+    "css-loader": "^3.4.2",
+    "mini-css-extract-plugin": "^0.9.0",
+    "serve": "11",
+    "style-loader": "^1.1.3",
     "svelte": "^3.19.1",
     "svelte-loader-hot": "^0.2.1",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.3.1"
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
