--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "serve": "11",
     "style-loader": "^1.1.3",
-    "svelte": "^3.19.1",
+    "svelte": "~3.19.1",
     "svelte-loader-hot": "^0.2.1",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
